# PelotasDijkstraMap

./: CMakeLists.txt  Maps.qrc  QmlMaps.qml  dataloader.cpp  dataloader.h  dijkstra.cpp  dijkstra.h  grafo.cpp  grafo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
